--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "15.3.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "next": "^15.5.9",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
   "devDependencies": {
     "eslint": "9.28.0",
-    "eslint-config-next": "15.3.3"
+    "eslint-config-next": "^15.5.9"
   }
 }
